--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -4,7 +4,6 @@
 {% block title %}
   {{ product.name }}
 {% endblock %}
-
 {% block content %}
   <div class="product-detail">
     <img src="{% if product.image %}{{ product.image.url }}{% else %}
@@ -16,6 +15,11 @@
       </a>
     </h2>
     <p class="price">${{ product.price }}</p>
+    <form action="{% url "cart:cart_add" product.id %}" method="post">
+      {{ cart_product_form }}
+      {% csrf_token %}
+      <input type="submit" value="Add to cart">
+    </form>
     {{ product.description|linebreaks }}
   </div>
 {% endblock %}
