update css and added order templates

--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -2,20 +2,20 @@
 {% load static %}
 
 {% block title %}
-  Your shopping cart
+  Ваша корзина
 {% endblock %}
 
 {% block content %}
-  <h1>Your shopping cart</h1>
+  <h1>Ваша корзина</h1>
   <table class="cart">
     <thead>
       <tr>
-        <th>Image</th>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Remove</th>
-        <th>Unit price</th>
-        <th>Price</th>
+        <th>Изображение</th>
+        <th>Товар</th>
+        <th>Количество</th>
+        <th>Удалить</th>
+        <th>Цена за единицу</th>
+        <th>Цена</th>
       </tr>
     </thead>
     <tbody>
@@ -33,31 +33,31 @@
               <form action="{% url "cart:cart_add" product.id %}" method="post">
                 {{ item.update_quantity_form.quantity }}
                 {{ item.update_quantity_form.override }}
-                <input type="submit" value="Update">
+                <input type="submit" value="Обновить">
                 {% csrf_token %}
               </form>
             </td>
             <td>
               <form action="{% url "cart:cart_remove" product.id %}" method="post">
-                <input type="submit" value="Remove">
+                <input type="submit" value="Удалить">
                 {% csrf_token %}
               </form>
             </td>
-            <td class="num">${{ item.price }}</td>
-            <td class="num">${{ item.total_price }}</td>
+            <td class="num">{{ item.price }} ₽</td>
+            <td class="num">{{ item.total_price }} ₽</td>
           </tr>
         {% endwith %}
       {% endfor %}
       <tr class="total">
-        <td>Total</td>
+        <td>Общая сумма</td>
         <td colspan="4"></td>
-        <td class="num">${{ cart.get_total_price }}</td>
+        <td class="num">{{ cart.get_total_price }} ₽</td>
       </tr>
     </tbody>
   </table>
   <p class="text-right">
     <a href="{% url "shop:product_list" %}" class="button
-    light">Continue shopping</a>
-    <a href="#" class="button">Checkout</a>
+    light">Продолжить покупки</a>
+    <a href="{% url "orders:order_create" %}" class="button">Заказать</a>
   </p>
 {% endblock %}
