--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -14,11 +14,11 @@
         {{ product.category }}
       </a>
     </h2>
-    <p class="price">${{ product.price }}</p>
+    <p class="price">{{ product.price }} ₽</p>
     <form action="{% url "cart:cart_add" product.id %}" method="post">
       {{ cart_product_form }}
       {% csrf_token %}
-      <input type="submit" value="Add to cart">
+      <br><br><input type="submit" value="Добавить в корзину">
     </form>
     {{ product.description|linebreaks }}
   </div>
