--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -2,15 +2,15 @@
 {% load static %}
 
 {% block title %}
-  {% if category %}{{ category.name }}{% else %}Products{% endif %}
+  {% if category %}{{ category.name }}{% else %}Товары{% endif %}
 {% endblock %}
 
 {% block content %}
   <div id="sidebar">
-    <h3>Categories</h3>
+    <h3>Категории</h3>
     <ul>
       <li {% if not category %}class="selected"{% endif %}>
-        <a href="{% url "shop:product_list" %}">All</a>
+        <a href="{% url "shop:product_list" %}">Все</a>
       </li>
       {% for c in categories %}
         <li {% if category.slug == c.slug %}class="selected"{% endif %}>
@@ -20,7 +20,7 @@
     </ul>
   </div>
   <div id="main" class="product-list">
-    <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
+    <h1>{% if category %}{{ category.name }}{% else %}Товары{% endif %}</h1>
     {% for product in products %}
       <div class="item">
         <a href="{{ product.get_absolute_url }}">
@@ -28,7 +28,7 @@
         </a>
         <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
         <br>
-        ${{ product.price }}
+        {{ product.price }} ₽
       </div>
     {% endfor %}
   </div>
