--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -15,6 +15,7 @@
       </a>
     </h2>
     <p class="price">{{ product.price }} ₽</p>
+    <p class="price">Осталось: {{ product.quantity }} шт</p>
     <form action="{% url "cart:cart_add" product.id %}" method="post">
       {{ cart_product_form }}
       {% csrf_token %}
