--- a/users/templates/account/edit.html
+++ b/users/templates/account/edit.html
@@ -2,8 +2,8 @@
 {% block title %}Edit your account{% endblock %}
 
 {% block content %}
-  <h1>Edit your account</h1>
-  <p>You can edit your account using the following form:</p>
+  <h1>Редактирование вашего аккаунта</h1>
+  <p>Вы можете изменить Ваш аккаунт используя форму:</p>
   <form method="post" enctype="multipart/form-data">
     {{ user_form.as_p }}
     {{ profile_form.as_p }}
