--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -14,8 +14,9 @@
     <div class="cart">
         {% with total_items=cart|length %}
         {% if total_items > 0 %}
-        <img src="{% static "img/cart.png" %}" height='25px' width='25px'> Ваша корзина:
         <a href="{% url "cart:cart_detail" %}">
+        <img src="{% static "img/cart.png" %}" height='25px' width='25px'>
+        Ваша корзина:
         {{ total_items }}
         {% if total_items == 1 %}
         товар
@@ -27,9 +28,14 @@
         на {{ cart.get_total_price }} ₽
         </a>
         {% elif not order %}
-        <img src="{% static "img/cart.png" %}" height='25px' width='25px'> Ваша корзина пуста.
+        <a href="{% url "cart:cart_detail" %}">
+        <img src="{% static "img/cart.png" %}" height='25px' width='25px'>
+        Ваша корзина пуста</a>
         {% endif %}
         {% endwith %}
+    </div>
+    <div class="profile">
+        <a href="{% url "users:user_detail" %}">Мой профиль</a>
     </div>
 </div>
 <div id="content">
