update order detail and product list templates

--- a/orders/templates/orders/order/detail.html
+++ b/orders/templates/orders/order/detail.html
@@ -1,7 +1,7 @@
 {% extends "shop/base.html" %}
 {% load static %}
 
-{% block title %}{{ user.get_full_name }}{% endblock %}
+{% block title %}Заказ №{{order.id}}{% endblock %}
 
 {% block content %}
   <div class="order_detail_info">
