--- a/users/templates/account/edit.html
+++ b/users/templates/account/edit.html
@@ -6,8 +6,7 @@
   <p>Вы можете изменить Ваш аккаунт используя форму:</p>
   <form method="post" enctype="multipart/form-data">
     {{ user_form.as_p }}
-    {{ profile_form.as_p }}
     {% csrf_token %}
-    <p><input type="submit" value="Save changes"></p>
+    <p><input type="submit" value="Сохранить изменения"></p>
   </form>
 {% endblock %}
