--- a/users/templates/account/user/detail.html
+++ b/users/templates/account/user/detail.html
@@ -4,23 +4,25 @@
 
 {% block content %}
 <h1>Ваш профиль:</h1>
-  <div class="profile">
-    <h2><strong>Имя:</strong> {{ user.first_name }}</h2>
-    <h2><strong>Фамилия:</strong> {{ user.last_name }}</h2>
-    <h2><strong>Электронная почта:</strong> {{ user.email }}</h2>
+  <div class="profile-info">
+    <h2>Имя:</h2>
+    <h3>{{ user.first_name }}</h3>
+    <h2>Фамилия:</h2>
+    <h3>{{ user.last_name }}</h3>
+    <h2>Электронная почта:</h2>
+    <h3>{{ user.email }}</h3>
     <br>
     <p class="text-left"><a href="{% url "users:user_edit" %}" class="button">Редактировать</a>
         <a href="{% url "users:logout" %}" class="button light">Выйти</a></p>
-    <br>
   </div>
 
   <div class="order-info-profile">
-
-    <h3>Ваши заказы</h3>
+    <h2>Ваши заказы:</h2>
       <ul>
         {% for order in orders %}
           <li>
-            <a href="{{ order.get_absolute_url }}">Заказ №{{ order.id }}</a>
+            <a href="{{ order.get_absolute_url }}">Заказ №{{ order.id }} от {{order.get_created_date}}
+            на сумму {{ order.get_total_cost }} &#8381</a>
           </li>
         {% endfor %}
       </ul>
