--- a/users/templates/account/register.html
+++ b/users/templates/account/register.html
@@ -1,12 +1,12 @@
 {% extends "shop/base.html" %}
-{% block title %}Create an account{% endblock %}
+{% block title %}Создать новый аккаунт{% endblock %}
 
 {% block content %}
-    <h1>Create an account</h1>
-    <p>Please, sign up using the following form:</p>
+    <h1>Создать новый аккаунт</h1>
+    <p>Пожалуйста, заполните следующую форму</p>
     <form method="post">
         {{ user_form.as_p }}
         {% csrf_token %}
-        <p><input type="submit" value="Create my account"></p>
+        <p><input type="submit" value="Создать мой аккаунт"></p>
     </form>
 {% endblock %}
