--- a/users/templates/registration/password_reset_confirm.html
+++ b/users/templates/registration/password_reset_confirm.html
@@ -1,17 +1,17 @@
 {% extends "shop/base.html" %}
-{% block title %}Reset your password{% endblock %}
+{% block title %}Обновить пароль{% endblock %}
 
 {% block content %}
-    <h1>Reset your password</h1>
+    <h1>Обновить пароль</h1>
     {% if validlink %}
-        <p>Please enter your new password twice:</p>
+        <p>Пожалуйста, введите новый пароль дважды</p>
         <form method="post">
             {{ form.as_p }}
             {% csrf_token %}
-            <p><input type="submit" value="Change my password"/></p>
+            <p><input type="submit" value="Сменить мой пароль"/></p>
         </form>
     {% else %}
-        <p>The password reset link was invalid, possibly because it has already
-            been used. Please request a new password reset.</p>
+        <p>Ссылка для сброса пароля неверна, возможно она уже была использована.</p>
+        <p>Пожалуйста запросите сброс пароля еще раз</p>
     {% endif %}
 {% endblock %}
