--- a/users/templates/registration/password_reset_done.html
+++ b/users/templates/registration/password_reset_done.html
@@ -1,8 +1,8 @@
 {% extends "shop/base.html" %}
-{% block title %}Reset your password{% endblock %}
+{% block title %}Сброс пароля{% endblock %}
 {% block content %}
-    <h1>Reset your password</h1>
-    <p>We've emailed you instructions for setting your password.</p>
-    <p>If you don't receive an email, please make sure
-        you've entered the address you registered with.</p>
+    <h1>Сброс пароля</h1>
+    <p>Мы отправили на Вашу электронную почту инструкцию для сброса пароля</p>
+    <p>Если вы не получили письмо, то проверьте правильность введенного адреса</p>
+
 {% endblock %}
