--- a/users/templates/registration/password_reset_email.html
+++ b/users/templates/registration/password_reset_email.html
@@ -1,3 +1,5 @@
-Someone asked for password reset for email {{ email }}. Follow the link below:
+Кто-то запросил сброс пароля на адрес {{ email }}.
+Для того, чтобы сбросить пароль, перейдите по ссылке:
 {{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}
-Your username, in case you've forgotten: {{ user.get_username }}
+
+Если вы не запрашивали это письмо, то игнорируйте его.
