--- a/users/templates/registration/password_change_done.html
+++ b/users/templates/registration/password_change_done.html
@@ -1,7 +1,8 @@
 {% extends "shop/base.html" %}
-{% block title %}Password changed{% endblock %}
+{% block title %}Пароль изменен{% endblock %}
 
 {% block content %}
-  <h1>Password changed</h1>
-  <p>Your password has been successfully changed.</p>
+  <h1>Пароль изменен</h1>
+  <p>Ваш пароль был успешно изменен!</p>
+  <p><a href="{% url "shop:product_list" %}">Продолжить покупки</a></p>
 {% endblock %}
