--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -1,11 +1,11 @@
 {% extends "shop/base.html" %}
-{% block title %}Change your password{% endblock %}
+{% block title %}Изменение пароля{% endblock %}
 {% block content %}
-    <h1>Change your password</h1>
-    <p>Use the form below to change your password.</p>
+    <h1>Изменение пароля</h1>
+    <p>Используйте форму для смены пароля</p>
     <form method="post">
         {{ form.as_p }}
-        <p><input type="submit" value="Change"></p>
+        <p><input type="submit" value="Изменить"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
