--- a/users/templates/registration/password_reset_complete.html
+++ b/users/templates/registration/password_reset_complete.html
@@ -1,8 +1,8 @@
 {% extends "shop/base.html" %}
-{% block title %}Password reset{% endblock %}
+{% block title %}Пароль обновлен{% endblock %}
 
 {% block content %}
-  <h1>Password set</h1>
-  <p>Your password has been set.
-  You can <a href="{% url "login" %}">log in now</a></p>
+  <h1>Пароль обновлен</h1>
+  <p>Ваш пароль был обновлен
+  Вы можете <a href="{% url "login" %}">войти в систему</a></p>
 {% endblock %}
