--- a/users/templates/registration/password_reset_form.html
+++ b/users/templates/registration/password_reset_form.html
@@ -1,11 +1,11 @@
 {% extends "shop/base.html" %}
 {% block title %}Reset your password{% endblock %}
 {% block content %}
-    <h1>Forgotten your password?</h1>
-    <p>Enter your e-mail address to obtain a new password.</p>
+    <h1>Забыли свой пароль?</h1>
+    <p>Введите ваш email адрес, чтобы восcтановить пароль</p>
     <form method="post">
         {{ form.as_p }}
-        <p><input type="submit" value="Send e-mail"></p>
+        <p><input type="submit" value="Отправить сообщение"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
