changed auth urls

--- a/users/templates/account/user/detail.html
+++ b/users/templates/account/user/detail.html
@@ -13,7 +13,7 @@
     <h3>{{ user.email }}</h3>
     <br>
     <p class="text-left"><a href="{% url "users:user_edit" %}" class="button">Редактировать</a>
-        <a href="{% url "logout" %}" class="button light">Выйти</a></p>
+        <a href="{% url "users:logout" %}" class="button light">Выйти</a></p>
   </div>
 
   <div class="order-info-profile">
