--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -4,6 +4,6 @@
 <h1>Вы вышли из профиля</h1>
 <p>
     Вы успешно вышли из профиля
-    Вы можете <a href="{% url "login" %}">войти в профиль еще раз</a>.
+    Вы можете <a href="{% url "users:login" %}">войти в профиль еще раз</a>.
 </p>
 {% endblock %}
