--- a/users/templates/registration/password_reset_complete.html
+++ b/users/templates/registration/password_reset_complete.html
@@ -4,5 +4,5 @@
 {% block content %}
   <h1>Пароль обновлен</h1>
   <p>Ваш пароль был обновлен
-  Вы можете <a href="{% url "login" %}">войти в систему</a></p>
+  Вы можете <a href="{% url "users:login" %}">войти в систему</a></p>
 {% endblock %}
