--- a/users/templates/registration/password_reset_email.html
+++ b/users/templates/registration/password_reset_email.html
@@ -1,5 +1,5 @@
 Кто-то запросил сброс пароля на адрес {{ email }}.
 Для того, чтобы сбросить пароль, перейдите по ссылке:
-{{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}
+{{ protocol }}://{{ domain }}{% url "users:password_reset_confirm" uidb64=uid token=token %}
 
 Если вы не запрашивали это письмо, то игнорируйте его.
