--- a/users/templates/registration/password_reset_form.html
+++ b/users/templates/registration/password_reset_form.html
@@ -2,7 +2,7 @@
 {% block title %}Reset your password{% endblock %}
 {% block content %}
     <h1>Забыли свой пароль?</h1>
-    <p>Введите ваш email адрес, чтобы восcтановить пароль</p>
+    <p>Введите ваш email адрес, чтобы восстановить пароль</p>
     <form method="post">
         {{ form.as_p }}
         <p><input type="submit" value="Отправить сообщение"></p>
