--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Изменение пароля</h1>
     <p>Используйте форму для смены пароля</p>
-    <form method="post">
+    <form method="post" class="login-form">
         {{ form.as_p }}
         <p><input type="submit" value="Изменить"></p>
         {% csrf_token %}
