updated order and register template

--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -7,5 +7,5 @@
 {% block content %}
   <h1>Благодарим за заказ!</h1>
   <p>Ваш заказ был успешно оформлен. Номер Вашего заказа -
-  <strong>{{ order.id }}</strong>.</p>
+  <strong>{{ new_order.id }}</strong>.</p>
 {% endblock %}
