added delete user form and template

--- a/app/users/templates/account/edit.html
+++ b/app/users/templates/account/edit.html
@@ -1,5 +1,5 @@
 {% extends "shop/base.html" %}
-{% block title %}Edit your account{% endblock %}
+{% block title %}Редактирование аккаунта{% endblock %}
 
 {% block content %}
   <h1>Редактирование вашего аккаунта</h1>
