--- a/app/orders/templates/orders/order/create.html
+++ b/app/orders/templates/orders/order/create.html
@@ -12,11 +12,17 @@
       {% for item in cart %}
         <li>
           {{ item.quantity }} x {{ item.product.name }}
-          <span>{{ item.total_price }}</span>
+          <span>{{ item.total_price }} ₽</span>
         </li>
       {% endfor %}
+      {% if cart.coupon %}
+        <li>
+          "{{ cart.coupon.code }}" (скидка {{ cart.coupon.discount }}%)
+          <span class="neg">-{{ cart.get_discount|floatformat:2 }} ₽</span>
+        </li>
+      {% endif %}
     </ul>
-    <p>Всего: {{ cart.get_total_price }} ₽</p>
+    <p>Всего: {{ cart.get_total_price_with_discount|floatformat:2 }} ₽</p>
   </div>
   <form method="post" class="order-form">
     {{ form.as_p }}
