--- a/app/cart/templates/cart/detail.html
+++ b/app/cart/templates/cart/detail.html
@@ -75,22 +75,30 @@
       </tr>
     </tbody>
   </table>
-  <form action="{% url "coupons:apply" %}" method="post" class="coupon_form">
-    {{ coupon_apply_form.as_p }}
-    <input type="submit" width: 100px value="Применить">
-    {% csrf_token %}
-  </form>
+  {% if recommended_products %}
+  <div class="recommendations cart">
+    <h3>Рекомендуем Вам также посмотреть:</h3>
+    {% for p in recommended_products %}
+      <div class="item">
+        <a href="{{ p.get_absolute_url }}">
+          <img src="{% if p.image %}{{ p.image.url }}{% else %}
+          {% static "img/no_image.png" %}{% endif %}">
+        </a>
+        <p><a href="{{ p.get_absolute_url }}">{{ p.name }}</a></p>
+      </div>
+    {% endfor %}
+  </div>
+  {% endif %}
   <p class="text-right">
     <a href="{% url "shop:product_list" %}" class="button
     light">Продолжить покупки</a>
-    <a href="{% url "orders:order_create" %}" class="button">Заказать</a>
+    <a href="{% url "orders:order_create" %}" class="button">Оформить</a>
   </p>
-  {% else %}
-   <h1>Ваша корзина пуста</h1>
   <br>
-    <p class="text-left">
-        <a href="{% url "shop:product_list" %}" class="button
-        light">Продолжить покупки</a>
-    </p>
+  <form action="{% url "coupons:apply" %}" class='coupon_form' method="post" >
+    {{ coupon_apply_form }}
+    <input type="submit" value="Применить">
+    {% csrf_token %}
+  </form>
   {% endif %}
 {% endblock %}
