--- a/app/shop/static/css/base.css
+++ b/app/shop/static/css/base.css
@@ -370,7 +370,7 @@ ul.errorlist {
 }
 
 .recommendations.cart {
-    width: 60%;
+    width: 55%;
     float: left;
     overflow: auto;
 }
@@ -477,7 +477,7 @@ form div.field {
 }
 
 .coupon_form {
-    float: left;
+    float: right;
 }
 
 
@@ -492,5 +492,11 @@ form div.field {
     border-radius: 4px;
 }
 .coupon_form input[type="submit"] {
-    width: 170px;
+    width: 114px;
+}
+
+.buttons.cart {
+    width: 40%;
+    float: right;
+    overflow: auto;
 }
