--- a/app/shop/templates/shop/product/detail.html
+++ b/app/shop/templates/shop/product/detail.html
@@ -22,5 +22,19 @@
       <br><br><input type="submit" value="Добавить в корзину">
     </form>
     {{ product.description|linebreaks }}
+    {% if recommended_products %}
+      <div class="recommendations">
+      <h3>Рекомендуем Вам также посмотреть:</h3>
+      {% for p in recommended_products %}
+        <div class="item">
+          <a href="{{ p.get_absolute_url }}">
+            <img src="{% if p.image %}{{ p.image.url }}{% else %}
+            {% static "img/no_image.png" %}{% endif %}">
+          </a>
+          <p><a href="{{ p.get_absolute_url }}">{{ p.name }}</a></p>
+        </div>
+      {% endfor %}
+      </div>
+    {% endif %}
   </div>
 {% endblock %}
