update table in order detail template

--- a/app/orders/templates/orders/order/detail.html
+++ b/app/orders/templates/orders/order/detail.html
@@ -48,10 +48,29 @@
               </tr>
             {% endwith %}
           {% endfor %}
+
+          {% if order.coupon %}
+            <tr class="subtotal">
+              <td>Промежуточный итог</td>
+              <td colspan="3"></td>
+              <td class="num">{{ order.get_total_cost_before_discount|floatformat:2 }} ₽</td>
+            </tr>
+            <tr>
+              <td>
+                "{{ order.coupon.code }}" купон
+                (скидка {{ cart.coupon.discount }}%)
+              </td>
+              <td colspan="3"></td>
+              <td class="num neg">
+                – {{ order.get_discount|floatformat:2 }} ₽
+              </td>
+            </tr>
+          {% endif %}
+
           <tr class="total">
             <td>Общая сумма</td>
             <td colspan="3"></td>
-            <td class="num">{{ order.get_total_cost }} ₽</td>
+            <td class="num">{{ order.get_total_cost|floatformat:2 }} ₽</td>
           </tr>
         </tbody>
       </table>
