--- a/app/orders/templates/orders/order/detail.html
+++ b/app/orders/templates/orders/order/detail.html
@@ -57,8 +57,8 @@
             </tr>
             <tr>
               <td>
-                "{{ order.coupon.code }}" купон
-                (скидка {{ cart.coupon.discount }}%)
+                Купон "{{ order.coupon.code }}"
+                (скидка {{ order.discount }}%)
               </td>
               <td colspan="3"></td>
               <td class="num neg">
